--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
     "lodash.get": "^4.4.2",
     "lodash.startcase": "^4.4.0",
     "opencollective-postinstall": "^2.0.1",
